<resources>
    <string name="app_name">proj_GUI</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mode_txt">Students may borrow equipment and staff may edit or analyse the database with the requirement of a password.</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="swipe_txt">Swipe left to see additional app functions.</string>
    <string name="swipeback_txt">Swipe right to check the equipment database or use the menu in the top-right to access a search function.</string>
    <string name="welcome_txt">Welcome to the Lab Equipment Manager. Use the dropdown below to view the equipment database.</string>
    <string name="password">Enter Password..</string>
    <string name="welcome_mode">Click on a button below to select a mode. Your mode will influence which functions of the app you are able to access.</string>
    <string name="menu_search">Search</string>
    <string name="menu_return">Return to Mode Page</string>
    <string name="borrow_txt">Enter your details and the details the item you wish to borrow in the spaces below.</string>
    <string name="borrow_item">BORROW</string>
    <string name="stud_email">Student email:</string>
    <string name="item_id">Item ID:</string>
    <string name="quant">Quantity:</string>
    <string name="chk_txt">Email an invoice of the borrow order?</string>
    <string name="confirm">Please double check the details and then confirm the order by pressing the Borrow button below. You can also find your previously borrowed items by pressing Find and return items by pressing Return.</string>
    <string name="email_hint">s1234567@student.rmit.edu.au</string>
    <string name="blank_hint" />
    <string name="c1_head1">Name</string>
    <string name="c2_head1">E-mail</string>
    <string name="c3_head1">Phone</string>
    <string name="c4_head1">Item borrowed</string>
    <string name="c5_head1">Quantity</string>
    <string name="c1_head2">Item ID</string>
    <string name="c2_head2">Item Name</string>
    <string name="c3_head2">Price</string>
    <string name="c4_head2">Max Quantity</string>
    <string name="c5_head2">Lab location</string>
    <string name="s_name">Student Name:</string>
    <string name="s_id">Student ID:</string>
    <string name="mobile_txt">Mobile Number:</string>
    <string name="bt_find">FIND</string>
    <string name="bt_delete">DELETE</string>
    <string name="bt_return">RETURN</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="item_name">Item Name:</string>
    <string name="item_price">Item Price:</string>
    <string name="item_stock">Total Item Stock:</string>
    <string name="Add">ADD</string>
    <string name="item_lab">Laboratory:</string>
    <string name="no_match">No Match Found</string>
    <string name="deleted">Record Deleted</string>

</resources>