<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModePage">

    <TextView
        android:id="@+id/welcome_txt2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="480dp"
        android:gravity="start"
        android:overScrollMode="always"
        android:singleLine="false"
        android:text="@string/welcome_mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/swipeback_txt"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:gravity="start"
        android:overScrollMode="always"
        android:singleLine="false"
        android:text="@string/swipeback_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mode_txt"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:gravity="start"
        android:overScrollMode="always"
        android:singleLine="false"
        android:text="@string/mode_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stud_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:onClick="stud_click"
        android:text="@string/student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/staff_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:onClick="staff_click"
        android:text="@string/staff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/staff_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/staff_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>